syntax = "proto3";

package manager.api.system;

option go_package = "manager/api/system;system";
option java_multiple_files = true;
option java_package = "manager.api.system";

import "validate/validate.proto";
import "google/protobuf/any.proto";

message GetSystemSettingRequest {
}


message DictionaryValue {
  string label = 1;
  string value = 2;
  optional string type = 3;
  optional string extra = 4;
}

message GetSystemSettingReply {
//  message DictionaryValueList{
//    repeated DictionaryValue list = 8;
//  }
  bool debug = 1;
  string title = 2;
  string desc = 3;
  string copyright = 4;
  string logo = 5;
  string changePasswordType = 6;
  string watermark = 7;
//  map<string,DictionaryValueList> dictionaries = 8;
}
